Second version of the tribute page

--- a/Kb-Umuzi-Project/web/index.html
+++ b/Kb-Umuzi-Project/web/index.html
@@ -35,6 +35,9 @@
 
                 </div>
                 <div class="paragraph text-center">
+                    <div>
+                            <img class="img-format2 text-center" id="img-fade-in2" src="images/phili.jpg" />
+                        </div>
                     <h2>Early life</h2>
                     <p>
                         Emeagwali was born to a poor family in Akure, Nigeria, in 1954. Despite his brain for math, he had to drop out of school because his family, who had become war refugees, could no longer afford to send him. As a young man, he earned a general education certificate from the University of London and later degrees from George Washington University and the University of Maryland, as well as a doctoral fellowship from the University of Michigan.
