Final version of the tribute page

--- a/Kb-Umuzi-Project/web/index.html
+++ b/Kb-Umuzi-Project/web/index.html
@@ -123,7 +123,7 @@
 
             <div class="paragraph text-center border-class">
                 <div>
-                    <img class="img-format5 text-center" id="img-fade-in2" src="images/philipemeagwali01.jpg" />
+                    <img class="img-format5 text-center" id="img-fade-in2" src="http://img.timeinc.net/time/2007/blackhistmth/unsung/emeagwali.jpg" />
                 </div>
                 <br><br>
                 <h2>Accolades</h2>
